# MoreTech4_2022

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: fill_database.py  pyproject.toml
backend/app/: ml_kernel.py  utils.py
backend/app/database/: __init__.py  base.py  tables.py
backend/app/database/migrations/versions/: 058079dbdb47_init.py  1c41b5697816_added_text_prepared_and_title_prepared.py  40fd671245e7_init.py  54aed53ea1d9_init.py  5963ae9c353b_change_link.py  6c4f806406b6_change_keyword.py  bf1377e2984b_image_tags.py  d5af732e5415_init.py  e07bdc1e64d8_init.py  f11c6cff33f7_change_user.py
backend/app/routers/: __init__.py  auth.py  digest.py  interesting_theme.py  interesting_trend.py  relevant_trend.py  roles.py  trend.py  user.py
backend/app/schemes/: __init__.py  digest.py  interesting_theme.py  interesting_trend.py  news.py  role.py  trend.py  trend_link.py  user.py
backend/app/services/: auth.py  base.py  digest.py  interesting_theme.py  interesting_trend.py  relevant_trend.py  role.py  trend.py  user.py
data_processing/: data_processing.ipynb  ml_kernel.py  requirements.txt
frontend/: package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  http.ts  main.ts
frontend/src/components/: NavBar.vue
frontend/src/components/cards/: DigestCard.vue  DigestSkeletonCard.vue  NewsCard.vue  NewsSkeletonCard.vue  TrendCard.vue  TrendSkeletonCard.vue
frontend/src/components/forms/: Login.vue  RecommendationSettings.vue  Register.vue
frontend/src/plugins/: vuetify.ts
frontend/src/router/: index.ts
frontend/src/store/: index.ts
frontend/src/store/types/: index.ts
frontend/src/validators/: index.ts
frontend/src/views/: FavoriteTrends.vue  LoginRegister.vue  News.vue  Profile.vue  Trends.vue
scraping/: banki.py  investing_0.py  investing_1.py  investing_2.py  investing_3.py  investing_4.py  investing_5.py  investing_6.py  smart_lab.py  сbr.py
