[tool.poetry]
name = "moretech"
version = "0.1.0"
description = ""
authors = ["y.romanchuk"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
alembic = "^1.8.1"
SQLAlchemy = "^1.4.41"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg2-binary = "^2.9.4"
pydantic = {extras = ["email"], version = "^1.9.1"}
pyhumps = "^3.7.3"
fastapi-pagination = {extras = ["sqlalchemy"], version = "^0.10.0"}
ipython = "^8.5.0"
pandas = "^1.5.0"
sklearn = "^0.0"
wordcloud = "^1.8.2.2"
spacy = "^3.4.1"
nltk = "^3.7"
clean-text = "^0.6.0"
pymystem3 = "^0.2.0"
scikit-learn = "^1.1.2"
scipy = "^1.9.2"
Pillow = "^9.2.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
sqlalchemy2-stubs = "^0.0.2a27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py39"]
exclude = '''
/(
    \.git
  | \.venv(.*)
  | venv
  | migrations
)/
'''

[tool.isort]
line_length = 120
skip_glob = [".venv*", "venv*", "migrations", "versions"]
# add for black compatible, more info: https://black.readthedocs.io/en/stable/the_black_code_style.html
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true